# RAG-service-support-public

./: .gitignore  README.md  pyproject.toml
notebooks/: judge_scores_bar_charts.ipynb
prompts/: generation_judge.md
results/: judge_score_bootstrap_ci.json  judge_score_means_by_model_summary.md  latency_bootstrap_ci.json  latency_bootstrap_ci_summary.md  retrieval_bootstrap_ci.json  retrieval_bootstrap_ci_summary.md
results/gemma_31/results_gold_bench/: benchmark_qa_generation_review_baseline.xlsx  benchmark_qa_generation_review_full.xlsx  benchmark_rag_results_baseline_pending_chunk_ids.txt  benchmark_rag_results_full_pending_chunk_ids.txt  benchmark_rag_results_narrow_pending_chunk_ids.txt
results/gemma_31/results_noise_bench/first_results_noise_bench/: benchmark_qa_generation_review_full.xlsx  benchmark_qa_generation_review_narrow.xlsx  benchmark_rag_results_baseline_pending_chunk_ids.txt  (+3 more)
results/gemma_4/results_gold_bench/: benchmark_qa_generation_review_narrow.xlsx
results/nemotron/results_gold_bench/: benchmark_qa_generation_review_baseline.xlsx  benchmark_qa_generation_review_full.xlsx  benchmark_qa_generation_review_narrow.xlsx  benchmark_rag_results_full_pending_chunk_ids.txt
results/qwen_35/: README.md
results/qwen_35/results_gold_bench/: benchmark_qa_generation_review_baseline.xlsx  benchmark_qa_generation_review_full.xlsx  benchmark_qa_generation_review_narrow.xlsx  benchmark_rag_results_full_pending_chunk_ids.txt
scripts/: __init__.py  build_judge_score_artifacts.py  build_latency_artifacts.py  build_retrieval_score_artifacts.py
(+56 files in other folders)
